# CartesioTests

./: CMakeLists.txt  README.md  cartesio_solver.cpp  exampleros.cpp
lib/: CMakeLists.txt  EndEffectorAdmittanceTask.cpp  EndEffectorAdmittanceTask.h  EndEffectorAdmittanceTaskRos.cpp  EndEffectorAdmittanceTaskRos.h  OpenSotEndEffectorAdmittance.cpp  OpenSotEndEffectorAdmittance.h
